# rustc_codegen_tpde

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml  config.txt  messages.ftl  y.sh
build_system/: Cargo.toml  abi_cafe.rs  bench.rs  build_backend.rs  build_sysroot.rs  config.rs  main.rs  prepare.rs  shared_utils.rs  tests.rs  usage.txt  utils.rs
example/: float-minmax-pass.rs  mini_core_hello_world.rs  neon.rs  std_example.rs
llvm-wrapper/: PassWrapper.cpp  README  SuppressLLVMWarnings.h
patches/: 0001-pingora-disable-arch-feature-in-dependent-crates.patch  0001-pingora-disable-arch-feature-in-libm-for-now.patch  pingora-lock.toml
scripts/: abi-cafe-rules.toml  cargo-tpde.rs  filter_profile.rs  rustc-tpde.rs  rustdoc-tpde.rs  rustup.sh  setup_rust_fork.sh  test_bootstrap.sh  test_rustc_tests.sh
src/: context.rs  errors.rs  intrinsic.rs  lib.rs  type_of.rs
src/back/: lto.rs  write.rs
src/llvm/: ffi.rs
tpde/: CMakeLists.txt
tpde/tpde-encodegen/src/: Target.hpp  encode_gen.cpp
tpde/tpde-encodegen/src/arm64/: EncCompilerTemplate.hpp  Target.cpp  Target.hpp
tpde/tpde-encodegen/src/x64/: EncCompilerTemplate.hpp  Target.cpp  Target.hpp
tpde/tpde-llvm/: CMakeLists.txt
tpde/tpde-llvm/src/: LLVMCompilerBase.hpp  encode_template.c  encode_template.ll
tpde/tpde-llvm/src/arm64/: LLVMCompilerArm64.cpp
tpde/tpde-llvm/src/x64/: LLVMCompilerX64.cpp
tpde/tpde/include/tpde/: CompilerBase.hpp
tpde/tpde/include/tpde/arm64/: CompilerA64.hpp
tpde/tpde/include/tpde/x64/: CompilerX64.hpp
tpde/tpde/src/test/: TestIRCompilerA64.hpp
