[package]
name = "rustc_codegen_llvm"
version = "0.0.0"
edition = "2024"

[lib]
test = false
crate-type = ["dylib"]

[dependencies]
# tidy-alphabetical-start
bitflags = "2.4.1"
# To avoid duplicate dependencies, this should match the version of gimli used
# by `rustc_codegen_ssa` via its `thorin-dwp` dependency.
gimli = "0.31"
itertools = "0.12"
libc = "0.2"
object = { version = "0.37.0", default-features = false, features = [
    "std",
    "read",
] }
rustc-demangle = "0.1.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
# tidy-alphabetical-end

[features]
# tidy-alphabetical-start
llvm_enzyme = []
# tidy-alphabetical-end


[package.metadata.rust-analyzer]
rustc_private = true
