[package]
name = "rustc_codegen_tpde"
version = "0.2.0"
edition = "2024"
authors = ["TechnoPorg"]

[lib]
test = false
crate-type = ["dylib"]

[build-dependencies]
# tidy-alphabetical-start
cc = "1.2.16"
cmake = "0.1.54"
# tidy-alphabetical-end

[features]
check_only = []
# tidy-alphabetical-start
llvm_enzyme = []
# tidy-alphabetical-end


[package.metadata.rust-analyzer]
rustc_private = true
