[package]
name = "y"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "y"
path = "main.rs"

[features]
unstable-features = [] # for rust-analyzer

# Do not add any dependencies

[profile.dev]
debug = 1

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
pathsearch = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
